[tool.black]
line-length = 119
target_version = ['py37']

[tool.poetry]
name = "blkct"
version = "0.1.0"
description = ""
authors = ["Shin ADACHI <shn@glucose.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^2.0"
aiohttp = "^3.5"
beautifulsoup4 = "^4.7"
boto3 = "^1.9"
chardet = "^3.0"
feedparser = "^5.2"
lxml = "^4.3"
colorama = "^0.4.1"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
mypy = "^0.701.0"
black = "=19.3b0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

